Revision history for Crypt-Random-Source

{{$NEXT}}

0.12      2016-03-11 03:41:35Z
          - bump Moo prereq to avoid issues with an attribute default

0.11      2015-10-24 03:57:25Z
          - converted from Any::Moose to Moo (RT#101526, PR#1, Graham Knop)

0.10      2014-08-31 18:01:31Z
          - fix test on older operating systems that define EAGAIN and
            EWOULDBLOCK as different values in errno.h

0.09      2014-08-30 17:07:04Z
          - bump prereq on namespace::clean (RT#65244) and IO::File (RT#68873)

0.08      2014-08-05 00:03:21Z
          - fix use of deprecated Any::Moose::load_class (RT#93163, David Pottage)

0.07      2011-01-05
          - Switch to using Capture::Tiny for Proc.pm, for Windows
            support.
          - Prevent a warning from Handle.pm during global destruction.
          - Make Crypt::Random::Source work properly in taint mode.

0.06      2010-12-23
          - Use Any::Moose to allow either Moose or Mouse.
          - Switch to dzil.

0.05      2009-11-25
          - dep on Moose instead of Mouse

0.04      2009-11-25
          - zap Squirrel

0.03      2008-06-17
          - Fucking manifest... we hates it

0.02      2008-06-17
          - Missing deps

0.01      2008-06-17
          - Added factory and sugary version

0.01_01   2008-06-17
          - Preview release, missing functionality