@@ -1,6 +1,8 @@
 Revision history for Crypt-Random-Source
 
 {{$NEXT}}
+	  - remove rand() fallback, which could be used by get_weak and is not safe
+	    for cryptographic applications
 
 0.12      2016-03-11 03:41:35Z
           - bump Moo prereq to avoid issues with an attribute default
